--- a/.babelrc
+++ b/.babelrc
@@ -1,22 +1,3 @@
 {
-  "presets": [
-    [
-      "env",
-      {
-        "targets": {
-          "browsers": [
-            "last 3 versions",
-            "IE 11",
-            "Android >= 4",
-            "iOS >= 8"
-          ]
-        }
-      }
-    ],
-    "flow"
-  ],
-  "plugins": [
-    "transform-class-properties",
-    "transform-runtime"
-  ]
+  "presets": ["es2015"]
 }
