--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,27 @@
 {
   "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true
+  },
   "extends": [
-    "standard",
-    "plugin:flowtype/recommended"
+    "prettier"
   ],
   "plugins": [
-    "flowtype"
-  ]
+    "prettier"
+  ],
+  "rules": {
+    "prettier/prettier": ["error", {
+        "trailingComma": "none",
+        "singleQuote": true,
+        "semi": false
+      }
+    ]
+  }
 }
