--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
   "name": "simple-custom-url-scheme",
+  "description": "Simple custom URL scheme launcher.",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "ava",
-    "build:dev": "webpack",
-    "build:prod": "cross-env NODE_ENV=production webpack",
-    "clear": "rimraf dist"
+    "build": "run-s build:rm build:mkdir build:cp build:js build:bundle",
+    "build:js": "babel src --out-dir dist",
+    "build:cp": "cpx {package.json,README.md} dist",
+    "build:mkdir": "mkdirp dist",
+    "build:rm": "rimraf dist",
+    "build:bundle": "webpack -p",
+    "test": "ava"
   },
   "devDependencies": {
     "ava": "^0.19.1",
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.4.0",
-    "babel-preset-flow": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.24.1",
+    "cpx": "^1.5.0",
     "cross-env": "^4.0.0",
     "eslint": "^3.19.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-flowtype": "^2.32.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-node": "^4.2.2",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "flow-bin": "^0.44.2",
+    "eslint-config-prettier": "^2.1.0",
+    "eslint-plugin-prettier": "^2.1.1",
+    "mkdirp": "^0.5.1",
+    "npm-run-all": "^4.0.2",
+    "prettier": "^1.3.1",
     "rimraf": "^2.6.1",
-    "webpack": "^2.4.1"
+    "webpack": "^2.5.1"
   },
   "ava": {
     "files": [
-      "test/**/*.spec.js"
+      "test/**/*.test.js"
     ],
     "require": [
       "babel-register"
